# Serokell-Introduction-to-Template-Haskell

./: ReadMe.md  th.cabal
app/: Main.hs  TH.hs  TuplesTH.hs
