cabal-version: 2.4
name:          th
version:       0.1.0.0

executable thtest
    main-is:            Main.hs
    hs-source-dirs:     app
    other-modules:
        TH
        TuplesTH

    default-language:   Haskell2010
    default-extensions: UnicodeSyntax
    build-depends:
        base ^>=4.14.3.0,
        template-haskell >= 2.16.0 && < 2.17
